<resources>
    <string name="app_name">Rehabilitación pulmonar</string>
    <string name="document">Documento</string>
    <string name="documentTypeViewModel">Tipo de documento</string>
    <string name="searchCreatePatientTitle">Buscar o crear un paciente</string>
    <string name="searchPatientTitle">Información del paciente</string>
    <string name="therapistTitle">Información del terapeuta</string>
    <string name="createPatientTitle">Crear un paciente</string>
    <string name="questionairesTitle">Cuestionarios</string>
    <string name="vitalSignsTitle">Signos vitales del paciente</string>
    <string name="routineExercisesTitle">Ejercicios de rutina</string>
    <string name="routineDetailTitle">Información sobre rutina</string>
    <string name="patient">Paciente</string>
    <string name="phisiologicalParametersIn">Parámetros Fisiológicos al inicio de la sesión</string>
    <string name="phisiologicalParametersOut">Parámetros Fisiológicos al finalizar de la sesión</string>
    <string name="watchExercises"> Ver ejercicios</string>
    <string name="settings">Settings</string>
    <string name="diseases">Enfermedades</string>
    <string name="ChooseRoutines">Elija los ejercicios para su terapia.</string>
    <string name="forgotYourPassword">¿ Olvidaste tu contraseña ?</string>
    <string name="register"> ¡Registrate! </string>
    <string name="user"> Usuario </string>
    <string name="password"> Contraseña </string>
    <string name="login"> Iniciar Sesión </string>
    <string name="watchTherapies"> Ver Terapias </string>
    <string name="watchMedicalHistories"> Ver Historias médicas </string>
    <string name="additionalInfo"> Información adicional </string>
    <string name="achieveTheGoal"> ¿ Logró la meta ? </string>
    <string name="institute">Institución </string>
    <string name="therapistViewModel">Terapeuta </string>
    <string name="welcome"> Bienvenido </string>
    <string name="e_mail">Correo</string>
    <string name="ConfirmEmail">Confirmar correo</string>
    <string name="ConfirmPassword">Confirmar Contraseña </string>
    <string name="Save">Guardar</string>
    <string name="name">Nombre de usuario</string>
    <string name="userDataRegister">Registrar datos de usuario</string>
    <string name="patientDataRegister">Datos de paciente</string>
    <string name="therapistDocument">Documento</string>
    <string name="time">Hora</string>
    <string name="date">Fecha</string>
    <string name="duration">Duracion (hrs)</string>
    <string name="DyspneaMmrc">Disnea mMRC</string>
    <string name="BorgD">Borg D</string>
    <string name="BorgE">Borg E</string>
    <string name="OxygenSaturation">Saturacion oxigeno</string>
    <string name="FC">FC</string>
    <string name="Saturation">Saturación</string>
    <string name="DiastolicPressure">Presión Diastólica</string>
    <string name="HeartRate">Frecuencia máxima cardiaca</string>
    <string name="CancelButton">Cancelar</string>
    <string name="SaveButton">Guardar</string>
    <string name="AddditionalInformationHint">Ingrese información adicional que desee para la terapia.</string>
    <string name="AddditionalInformationMedicalHistory">Ingrese información adicional que desee para la historia.</string>
    <string name="AddditionalInformationTitle">Información adicional</string>
    <string name="TherapySequence">Terapia # </string>
    <string name="TherapistNonSelected"><![CDATA[<Seleccionar terapeuta>]]></string>
    <string name="DocumentTypeNonSelected"><![CDATA[<Seleccionar tipo documento>]]></string>
    <string name="CategoryNonSelected"><![CDATA[<Seleccionar categoria>]]></string>
    <string name="OptionAnswerSelected"><![CDATA[<Seleccionar categoria>]]></string>
    <string name="GenderNonSelected"><![CDATA[<Seleccionar género>]]></string>
    <string name="NeighborhoodNonSelected"><![CDATA[<Seleccionar barrio>]]></string>
    <string name="MedicalHistorySequence">Historia médica # </string>
    <string name="Observations">Observaciones</string>
    <string name="Diagnostic">Diagnóstico</string>
    <string name="title_activity_main"></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Menú</string>
    <string name="nav_header_subtitle">Terapia de rehabilitación pulmonar</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="medicalHistoryName">Nombre de la historia</string>

    <string name="seach_create_patient">Buscar o crear paciente</string>
    <string name="search_patient">Ver datos del paciente</string>
    <string name="menu_exercises">Rutinas</string>
    <string name="therapies">Terapias</string>
    <string name="therapy_detail">ver última terapia</string>
    <string name="menu_profile">Perfíl</string>
    <string name="medical_histories">Historias médicas</string>
    <string name="medical_history_detail">ver última historia médica</string>

    <string name="menu_logout">Cerrar sesión</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="InstitutionNonSelected"><![CDATA[<Seleccionar institucion>]]></string>
    <string name="NonSelected"><![CDATA[<Seleccionar>]]></string>
</resources>
