<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvSearchPatientTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/searchPatientTitle"
                android:gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:textSize="@dimen/textSizeLevelOne"
                android:layout_gravity="center"/>
            <EditText
                android:id="@+id/etPatientName"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/patient"
                android:inputType="textPersonName" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="*">
            <TableRow
                android:layout_marginTop="50dp">

                <TextView
                    android:id="@+id/tvDocumentType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="1"
                    android:text="@string/documentTypeViewModel" />
                <Spinner
                    android:id="@+id/spnDocumentType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="4" />
            </TableRow>
                <TableRow
                    android:layout_marginTop="50dp">

                    <TextView
                        android:id="@+id/tvDocument"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_span="1"
                        android:text="@string/document" />
                    <EditText
                        android:id="@+id/etDocument"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_span="4"
                        android:hint="@string/document"
                        android:inputType="number" />
                </TableRow>
            </TableLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="*">


                <TableRow
                    android:layout_marginTop="50dp">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:layout_span="5"
                        android:layout_gravity="right"
                        android:layout_height="wrap_content">

                        <ImageButton
                            android:id="@+id/ibtnSearchPatient"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="20dp"
                            android:background="#00000000"
                            app:srcCompat="@drawable/search" />

                        <ImageButton
                            android:id="@+id/ibtnEditPatient"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="20dp"
                            android:background="#00000000"
                            app:srcCompat="@drawable/edit" />

                    </LinearLayout>
                </TableRow>

            </TableLayout>

    <TextView
        android:id="@+id/tvTherapiesHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_gravity="right"
        android:text="@string/watchTherapies" />


    <TextView
        android:id="@+id/tvMedicalHistories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_margin="15dp"
        android:text="@string/watchMedicalHistories" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>