<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/lyDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvDateAndTimeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5sp"
                    android:text="Fecha y hora"
                    android:textSize="@dimen/textSizeLevelTwo" />

                <TextView
                    android:id="@+id/tvDateAndTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5sp"
                    android:text="" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/lyOtherInfoHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvTherapyDuration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5sp"
                    android:text="Duración (mins)"
                    android:textSize="@dimen/textSizeLevelTwo" />

                <EditText
                    android:id="@+id/etTherapyDuration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5sp"
                    android:enabled="false"
                    android:text="" />

                <TextView
                    android:id="@+id/tvWatchExercises"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5sp"
                    android:text="@string/watchExercises"
                    android:textSize="@dimen/textSizeLevelOne" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/tvTherapySequence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="Terapia # 1"
            android:textSize="@dimen/textSizeLevelOne" />

        <TextView
            android:id="@+id/tvTherapist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_margin="10dp"
            android:text="Terapeuta"
            android:textSize="@dimen/textSizeLevelTwo" />

        <Spinner
            android:id="@+id/spnTherapist"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_margin="10dp" />

        <TextView
            android:id="@+id/tvInstitucion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:text="Institución"
            android:textSize="@dimen/textSizeLevelTwo" />

        <Spinner
            android:id="@+id/spnInstitution"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_alignParentBottom="true"
            android:layout_margin="10dp"
            android:layout_marginBottom="170dp" />

        <TextView
            android:id="@+id/tvPhisiologicalParametersIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_horizontal"
            android:text="@string/phisiologicalParametersIn"
            android:textSize="@dimen/textSizeLevelTwo" />

        <TextView
            android:id="@+id/tvPhisiologicalParametersOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/phisiologicalParametersOut"
            android:textSize="@dimen/textSizeLevelTwo" />

        <TextView
            android:id="@+id/tvAdditionalInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/additionalInfo"
            android:textSize="@dimen/textSizeLevelTwo" />

        <LinearLayout
            android:id="@+id/achieveTheGoal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/textSizeLevelOne"
            android:gravity="right"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvAchieveTheGoal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="@dimen/textSizeLevelOne"
                android:text="@string/achieveTheGoal"
                android:textSize="@dimen/textSizeLevelTwo" />

            <Switch
                android:id="@+id/swtAchieveTheGoal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="@dimen/textSizeLevelOne" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>